--- a/locales/ku.json
+++ b/locales/ku.json
@@ -5,118 +5,118 @@
     "Number": "ژمارە",
     "Email": "ئیمەیل",
     "Password": "وشەی نهێنی",
-    "Name is required": "پێویستە ناو بنوسرێت",
-    "Number is required": "پێویستە ژمارە بنوسرێت",
-    "Email is required": "پێویستە ئیمەیل بنوسرێت",
-    "Password is required": "پێویستە وشەی نهێنی بنوسرێت",
-    "Forgot password ?": "وشەی نهێنیت لەبیر کردووە؟",
-    "Forgot password": "وشەی نهێنیت لەبیر کردووە",
-    "OTP is required": "پێویستە کۆدی دڵنیاکردن بنوسرێت",
-    "Resend OTP": "دووبارە ناردنی OTP",
-    "Verify OTP": "دڵنیاکردنەوەی OTP",
-    "Confirm Password": "دڵنیاکردنەوەی وشەی نهێنی",
-    "Confirm Password is required": "پێویستە وشەی نهێنی دڵنیاکرابێت",
+    "Name is required": "ناو پێویستە",
+    "Number is required": "ژمارە پێویستە",
+    "Email is required": "ئیمەیل پێویستە",
+    "Password is required": "وشەی نهێنی پێویستە",
+    "Forgot password ?": "وشەی نهێنیت لەبیرکردووە؟",
+    "Forgot password": "وشەی نهێنیت لەبیرکردووە",
+    "OTP is required": "کۆدی OTP پێویستە",
+    "Resend OTP": "ناردنەوەی OTP",
+    "Verify OTP": "پشتڕاستکردنی OTP",
+    "Confirm Password": "دووبارەکردنەوەی وشەی نهێنی",
+    "Confirm Password is required": "دووبارەکردنەوەی وشەی نهێنی پێویستە",
     "Save": "پاشەکەوتکردن",
     "Send OTP": "ناردنی OTP",
-    "By clicking Sign up, you agree with our": "بە کرتەکردنە سەر خۆتۆمارکردن، ڕازی دەبیت بە",
+    "By clicking Sign up, you agree with our": "بە کرتەکردن لەسەر خۆتۆمارکردن، ڕازی دەبیت بە",
     "Terms and Condition": "مەرج و ڕێساکان",
     "and": "و",
     "Privacy Policy": "سیاسەتی نهێنی",
     "WELCOME": "بەخێربێیت",
-    "Please enter your Sign in details": "تکایە وردەکارییەکانی چوونەژوورەوە بنوسە",
-    "Enter email": "ئیمەیڵ بنوسە",
+    "Please enter your Sign in details": "تکایە زانیارییەکانی چوونەژوورەوە بنوسە",
+    "Enter email": "ئیمەیل بنوسە",
     "Sign In": "چوونەژوورەوە",
-    "Skip": "بپارێزەوە",
-    "Donot have an Account ?": "هەژمارت نیە؟",
+    "Skip": "تێپەڕاندن",
+    "Donot have an Account ?": "هەژمارت نییە؟",
     "Please enter your Sign up details": "تکایە زانیارییەکانی خۆتۆمارکردن بنوسە",
     "User": "بەکارهێنەر",
     "Seller": "فرۆشیار",
     "Driver": "شۆفێر",
     "Enter Name": "ناو بنوسە",
     "Phone Number": "ژمارەی تەلەفۆن",
-    "Referral Code": "کۆدی بانگەشە",
+    "Referral Code": "کۆدی بانگەشەی کەسێک ",
     "Referral Code (optional)": "کۆدی بانگەشە (بەدڵخواز)",
     "Sign Up": "خۆتۆمارکردن",
     "Already have any account ?": "پێشتر هەژمارت هەیە؟",
     "Sign in": "چوونەژوورەوە",
-    "Enter OTP": "کۆدی دڵنیاکردن بنوسە",
-    "OTP": "کۆدی دڵنیاکردن",
+    "Enter OTP": "کۆدی OTP بنوسە",
+    "OTP": "کۆدی OTP",
     "Next": "دواتر",
     "Submit": "ناردن",
     "Search": "گەڕان",
-    "We provide you the instant delivery !": "ئێمە پێشکەش دەکەین تاقیەکانی فەرمی!",
-    "Top Selling Items": "بەترین بەردەستەکان",
-    "See all": "بینینی هەموو",
-    "off": "تخفیف",
-    "Explore By Categories": "پەیمانەکان بە فەرهەنگی",
-    "Please login to access all the features": "تکایە بچۆ سەر خۆتۆمارکردن بۆ گەیاندنی هەموو تایبەتمەندیەکان",
-    "Login Now": "چوونەژوورەوە ئێستا",
-    "Refer a friend to earn points.": "دوستەکەت پەیوەندیت بکە بۆ کەوتنی پۆنەکان",
-    "Send invite": "ناردنی تاقیەکە",
-    "Current Points": "پۆنەکانی هەڵەی نوێ",
-    "Refer a friend": "دوستەکەی پەیوەندیدە بە",
-    "Cart": "خەزەنه",
-    "Empty Cart": "خەزەنه‌ی فەڕغ",
-    "Item Total": "هەموو شتکەی",
-    "Delivery Fee": "فێی ناردن",
-    "Saved": "پاشەکەوتکردن",
-    "Delivery Partner Tip": "پێشنیار نیشانی فەرمی",
-    "Total Payable": "کۆی فەرەنگی",
-    "CHANGE ADDRESS": "ناونیشانەکەت بگۆڕە",
-    "CONTINUE TO PAY": "بەردەوام بە بۆ پارەدان",
-    "Your Cart is empty": "سەبەتەکەت بەتاڵە",
-    "Browse Products": "کاڵاکان بگەڕێ",
-    "Are you sure of clearing your cart?": "دڵنیایت لە سڕینەوەی سەبەتەکەت؟",
+    "We provide you the instant delivery !": "ئێمە گەیاندنی خێرا پێشکەش دەکەین!",
+    "Top Selling Items": "زۆرترین کاڵا فرۆشراوەکان",
+    "See all": "هەمووی ببینە",
+    "off": "داشکان",
+    "Explore By Categories": "گەڕان بە پۆل",
+    "Please login to access all the features": "تکایە بچۆرە ژوورەوە بۆ بەدەستهێنانی هەموو تایبەتمەندییەکان",
+    "Login Now": "ئێستا بچۆرە ژوورەوە",
+    "Refer a friend to earn points.": "کەسێک بانگەشە بکە بۆ بەدەست هێنانی خاڵی زۆرتر",
+    "Send invite": "بانگهێشت ناردن",
+    "Current Points": "خاڵەکانی ئێستا",
+    "Refer a friend": "بانگەشەی کەسێک",
+    "Cart": "سبەتە",
+    "Empty Cart": "سبەتە بەتاڵە",
+    "Item Total": "کۆی کاڵاکان",
+    "Delivery Fee": "تێچووی گەیاندن",
+    "Saved": "هەڵگیراو",
+    "Delivery Partner Tip": "بەخشیشی شۆفێر",
+    "Total Payable": "کۆی پارەدان",
+    "CHANGE ADDRESS": "گۆڕینی ناونیشان",
+    "CONTINUE TO PAY": "بڕۆ بۆ پارەدان",
+    "Your Cart is empty": "سبەتەکەت بەتاڵە",
+    "Browse Products": "گەڕان بە کاڵاکان",
+    "Are you sure of clearing your cart?": "دڵنیایت لە سڕینەوەی سبەتەکەت؟",
     "No": "نەخێر",
-    "Yes, Clear": "بەڵێ، بسڕەوە",
+    "Yes, Clear": "بەڵێ، پاکیکەرەوە",
     "My Account": "هەژماری من",
-    "My orders": "داواکاریەکانم",
-    "Notifications": "ئاگادارکردنەوەکان",
-    "Help Center": "ناوەندی یارمەتیدان",
+    "My orders": "داواکارییەکانم",
+    "Notifications": "ئاگادارییەکان",
+    "Help Center": "ناوەندی یارمەتی",
     "Delete Account": "سڕینەوەی هەژمار",
-    "Log Out": "چوونە دەرەوە",
+    "Log Out": "چوونەدەرەوە",
     "Are you sure you want to sign out?": "دڵنیایت دەتەوێت بچیتە دەرەوە؟",
     "Cancel": "پاشگەزبوونەوە",
-    "Sign out": "چوونە دەرەوە",
-    "WARNING: You are about to delete your account. This action is permanent and cannot be undone.": "ئاگاداری: دەتەوێت هەژمارت بسڕیتەوە. ئەم کردارە بەردەوامە و ناتوانرێتەوە پێش بخرێتەوە.",
-    "• All your data, including personal information, and settings, will be permanently erased.": "• هەموو زانیاریەکانت، بەشەکەی زانیارییە تایبەتی و ڕێکخستنەکان، بە تەنیشتەوە دەسڕێنەوە بەشێوەی بەردەوام.",
-    "• You will lose access to all services and benefits associated with your account.": "• دەستدەکەویت بە گەیشتن بە هەموو خزمەتگوزاری و سوودەکانەوەی پەیوەست بە هەژمارت.",
+    "Sign out": "چوونەدەرەوە",
+    "WARNING: You are about to delete your account. This action is permanent and cannot be undone.": "ئاگاداری: تۆ لەسەر سڕینەوەی هەژمارەکەتیت. ئەم کردارە گەڕانەوەی نییە.",
+    "• All your data, including personal information, and settings, will be permanently erased.": "• هەموو زانیارییەکانت، لەنێویاندا زانیاری کەسی و ڕێکخستنەکان، بەشێوەی هەمیشەیی دەسڕێتەوە.",
+    "• You will lose access to all services and benefits associated with your account.": "• چوونەژوورەوەت بۆ هەموو خزمەتگوزاری و سوودەکانی هەژمارەکەت لەدەست دەدەیت.",
     "Are you sure you want to delete your account?": "دڵنیایت دەتەوێت هەژمارت بسڕیتەوە؟",
-    "Confirm": "دووپاتکردنەوە",
+    "Confirm": "پشتڕاستکردنەوە",
     "My Order": "داواکارییەکەم",
     "Loading...": "بارکردن...",
-    "No Orders": "هیچ داواکارییەک نیە",
-    "Date": "ڕێکەوت",
+    "No Orders": "هیچ داواکارییەک نییە",
+    "Date": "بەروار",
     "Qty": "ژمارە",
     "Total": "کۆی گشتی",
-    "My Notification": "ئاگادارکردنەوەکانم",
-    "No Notification": "هیچ ئاگادارکردنەوەیەک نیە",
+    "My Notification": "ئاگادارییەکانم",
+    "No Notification": "هیچ ئاگادارییەک نییە",
     "Order Detail": "وردەکاریی داواکاری",
-    "Total Amount": "کۆی گشتی بڕ",
+    "Total Amount": "کۆی گشتی",
     "Final Amount": "بڕی کۆتایی",
     "Product Detail": "وردەکاریی کاڵا",
     "ADD": "زیادکردن",
     "Product Information": "زانیاریی کاڵا",
-    "EXPIRY DATE": "رێکەوتی بەسەرچوون",
+    "EXPIRY DATE": "بەرواری بەسەرچوون",
     "COUNTRY OF ORIGIN": "وڵاتی بەرهەمهێنان",
     "MANUFACTURER NAME": "ناوی بەرهەمهێنەر",
     "MANUFACTURER ADDRESS": "ناونیشانی بەرهەمهێنەر",
-    "items": "شت",
-    "View Cart": "بینینی سەبەتە",
-    "No Products": "هیچ کاڵایەک نیە",
-    "What are u looking for ?": "دەگەڕێیت بە دوای چی؟",
-    "• You will no longer receive updates, support, or communications from us.": "• دواتر نوێکاری، پشتگیری یان پەیوەندیمان لەگەڵت ناکرێت.",
+    "items": "کاڵا",
+    "View Cart": "بینینی سبەتە",
+    "No Products": "هیچ کاڵایەک نییە",
+    "What are u looking for ?": "بەدوای چیدەگەڕێیت؟",
+    "• You will no longer receive updates, support, or communications from us.": "چیتر نوێکاری، پشتیوانی یان پەیوەندی لەلایەن ئێمەوە بۆت ناگات.",
     "Profile": "پرۆفایل",
     "Update Profile": "نوێکردنەوەی پرۆفایل",
-    "Edit Profile": "دەستکاری پرۆفایل",
-    "Enter Phone Number": "ژمارەی تەلەفۆن بنووسە",
+    "Edit Profile": "دەستکاریکردنی پرۆفایل",
+    "Enter Phone Number": "ژمارەی تەلەفۆن بنوسە",
     "Shipping Address": "ناونیشانی گەیاندن",
     "Shipping": "گەیاندن",
     "Full Name": "ناوی تەواو",
     "Address": "ناونیشان",
     "Address is required": "ناونیشان پێویستە",
     "House /Building No": "ژمارەی خانوو / بینا",
-    "House No /Building No / Streat Name": "ژمارەی خانوو / بینا / ناوی شقام",
+    "House No /Building No / Streat Name": "ژمارەی خانوو / بینا / ناوی شەقام",
     "Zip / Post Code": "کۆدی پۆست",
     "Zip/Post code is required": "کۆدی پۆست پێویستە",
     "Mobile Number": "ژمارەی مۆبایل",
@@ -124,120 +124,120 @@
     "City is required": "شار پێویستە",
     "Country": "وڵات",
     "Country is required": "وڵات پێویستە",
-    "Continue": "بەردەوام بە",
+    "Continue": "بەردەوامبوون",
     "Update Address": "نوێکردنەوەی ناونیشان",
-    "Pending": "چاوەڕوانە",
+    "Pending": "چاوەڕوان",
     "Assigned": "دیارکراو",
     "Location": "شوێن",
     "View Order Details": "بینینی وردەکاریی داواکاری",
-    "Assign Driver": "شوفر دیار بکە",
-    "Status": "بارودوخ",
-    "No Order Available": "هیچ داواکارییەک بەردەست نیە",
-    "Are you sure you want to assign driver !": "دڵنیایت دەتەوێت شوفر دیاربکەیت؟",
+    "Assign Driver": "دیارکردنی شۆفێر",
+    "Status": "بارودۆخ",
+    "No Order Available": "هیچ داواکارییەک بەردەست نییە",
+    "Are you sure you want to assign driver !": "دڵنیایت دەتەوێت شۆفێر دیاربکەیت؟",
     "Yes": "بەڵێ",
     "Add Product": "زیادکردنی کاڵا",
-    "Select Category": "هاوپۆشەکە هەلبژێرە",
-    "Category": "هاوپۆلە",
-    "Category is required": "هاوپۆل پێویستە",
-    "Enter Short Description": "کورتە وەسفێک بنووسە",
+    "Select Category": "پۆل هەڵبژێرە",
+    "Category": "پۆل",
+    "Category is required": "پۆل پێویستە",
+    "Enter Short Description": "کورتە وەسفێک بنوسە",
     "Short Description": "کورتە وەسف",
     "Short Description is required": "کورتە وەسف پێویستە",
-    "Enter Long Description": "درێژە وەسفێک بنووسە",
+    "Enter Long Description": "درێژە وەسفێک بنوسە",
     "Long Description": "درێژە وەسف",
     "Long Description is required": "درێژە وەسف پێویستە",
-    "Enter Country of Origin": "وڵاتی بەرهەمهێنان بنووسە",
+    "Enter Country of Origin": "وڵاتی بەرهەمهێنان بنوسە",
     "Country of Origin": "وڵاتی بەرهەمهێنان",
     "Country of Origin is required": "وڵاتی بەرهەمهێنان پێویستە",
-    "Expiry Date": "رێکەوتی بەسەرچوون",
-    "Enter Expiry Date": "رێکەوتی بەسەرچوون بنووسە",
-    "Expiry Date is required": "رێکەوتی بەسەرچوون پێویستە",
-    "Enter Manufacturername": "ناوی بەرهەمهێنەر بنووسە",
+    "Expiry Date": "بەرواری بەسەرچوون",
+    "Enter Expiry Date": "بەرواری بەسەرچوون بنوسە",
+    "Expiry Date is required": "بەرواری بەسەرچوون پێویستە",
+    "Enter Manufacturername": "ناوی بەرهەمهێنەر بنوسە",
     "Manufacturer Name": "ناوی بەرهەمهێنەر",
     "Manufacturer Name is required": "ناوی بەرهەمهێنەر پێویستە",
-    "Enter Manufactureradd": "ناونیشانی بەرهەمهێنەر بنووسە",
+    "Enter Manufactureradd": "ناونیشانی بەرهەمهێنەر بنوسە",
     "Manufacturer Add": "ناونیشانی بەرهەمهێنەر",
     "Manufacturer Add is required": "ناونیشانی بەرهەمهێنەر پێویستە",
     "Add More": "زیادکردنی زیاتر",
-    "Slot": "کاتی بەردەست",
-    "Enter Qty": "ژمارە بنووسە",
-    "Select Unit": "یەکە هەلبژێرە",
+    "Slot": "دیاریکردن",
+    "Enter Qty": "ژمارە بنوسە",
+    "Select Unit": "یەکە هەڵبژێرە",
     "Unit": "یەکە",
-    "Enter Discounted Price": "نرخی داشکاندن بنووسە",
+    "Enter Discounted Price": "نرخی داشکاو بنوسە",
     "Offer Price": "نرخی پێشنیارکراو",
-    "Enter Price": "نرخ بنووسە",
+    "Enter Price": "نرخ بنوسە",
     "Price": "نرخ",
-    "Upload Product Images": "وێنەی کاڵا بار بکە",
+    "Upload Product Images": "وێنەی کاڵا باربکە",
     "Image is required": "وێنە پێویستە",
     "Close": "داخستن",
     "Update": "نوێکردنەوە",
-    "Category Name": "ناوی هاوپۆلە",
-    "No Products Available": "هیچ کاڵایەک بەردەست نیە",
+    "Category Name": "ناوی پۆل",
+    "No Products Available": "هیچ کاڵایەک بەردەست نییە",
     "Alert !": "ئاگاداری!",
     "Are you sure you want to Delete this product !": "دڵنیایت دەتەوێت ئەم کاڵایە بسڕیتەوە؟",
     "History": "مێژوو",
-    "No History Available": "هیچ مێژوویەک بەردەست نیە",
-    "Packed": "بسته‌بندی کراو",
-    "Driver Assigned": "شوفر دیارکرا",
+    "No History Available": "هیچ مێژوویەک بەردەست نییە",
+    "Packed": "ئامادەکراو",
+    "Driver Assigned": "شۆفێر دیارکراو",
     "Products": "کاڵاکان",
     "Orders": "داواکارییەکان",
-    "Delivered": "گەیەنرا",
-    "Seller Details": "وردەکاری فرۆشیار",
-    "Cash collected": "پارە کۆکرا",
-    "Finish Ride": "ڕۆشتن تەواو بکە",
-    "Start Ride": "ڕۆشتن دەست پێبکە",
-    "Accept Ride": "ڕۆشتن ڕازیبە",
-    "Are you sure you want to Start this ride !": "دڵنیایت دەتەوێت ئەم گەشتە دەست پێبکەیت؟",
+    "Delivered": "گەیێنرا",
+    "Seller Details": "وردەکاریی فرۆشیار",
+    "Cash collected": "پارە کۆکرایەوە",
+    "Finish Ride": "کۆتایی هێنان بە گەشت",
+    "Start Ride": "دەستپێکردنی گەشت",
+    "Accept Ride": "قبوڵکردنی گەشت",
+    "Are you sure you want to Start this ride !": "دڵنیایت دەتەوێت ئەم گەشتە دەستپێبکەیت؟",
     "Are you sure you want to finish the ride?": "دڵنیایت دەتەوێت گەشتەکە تەواو بکەیت؟",
     "Are you sure you collected the cash?": "دڵنیایت پارەکەت کۆکردووە؟",
-    "Are you sure you want to Accept this ride to delivery !": "دڵنیایت دەتەوێت ئەم گەشتە بۆ گەیاندن ڕازیبەیت؟",
+    "Are you sure you want to Accept this ride to delivery !": "دڵنیایت دەتەوێت ئەم گەشتە بۆ گەیاندن قبوڵ بکەیت؟",
     "Ongoing": "بەردەوام",
     "Accept": "قبوڵکردن",
     "Shop location": "شوێنی فرۆشگا",
-    "Client location": "شوێنی کریار",
+    "Client location": "شوێنی کڕیار",
     "Driver Account": "هەژماری شۆفێر",
-    "Verification Status": "بارودوخى دڵنیاکردنەوە",
-    "DL Number": "ژمارەی مۆڵەتنامە",
-    "Dl number is required": "ژمارەی مۆڵەتنامە پێویستە",
-    "Upload License": "بارکردنی مۆڵەتنامە",
-    "License image is required": "وێنەی مۆڵەتنامە پێویستە",
+    "Verification Status": "بارودۆخی دڵنیاکردنەوە",
+    "DL Number": "ژمارەی مۆڵەتی شۆفێری",
+    "Dl number is required": "ژمارەی مۆڵەتی شۆفێری پێویستە",
+    "Upload License": "وێنەی مۆڵەت باربکە",
+    "License image is required": "وێنەی مۆڵەت پێویستە",
     "Address support letter": "نامەی پشتگیری ناونیشان",
     "Address support letter is required": "نامەی پشتگیری ناونیشان پێویستە",
-    "Number Plate": "ژمارەی تابلۆی ئۆتۆمبێل",
+    "Number Plate": "ژمارەی تابلۆ",
     "Number plate is required": "ژمارەی تابلۆ پێویستە",
     "Number plate image": "وێنەی ژمارەی تابلۆ",
     "Number plate image is required": "وێنەی ژمارەی تابلۆ پێویستە",
-    "National ID card number": "ژمارەی ناسنامەی نیشتمانی",
+    "National ID card number": "ژمارەی ناسنامە",
     "National ID card number is required": "ژمارەی ناسنامە پێویستە",
-    "National ID Card image": "وێنەی ناسنامەی نیشتمانی",
-    "Background check document image": "وێنەی بەڵگەنامەی پشتبینی",
-    "Please fill all the details. We will verify them within 3 to 5 business days. Kindly wait until the verification process is complete. Thank you for your patience.": "تکایە هەموو زانیاریەکان پڕبکەوە. لە ماوەی ٣ بۆ ٥ ڕۆژی کاری دا دڵنیابوونەوە دەکرێت. تکایە چاوەڕێی تەواوبوونی پرۆسەکە بکە. سوپاس بۆ بەرگەداریت.",
+    "National ID Card image": "وێنەی ناسنامە",
+    "Background check document image": "وێنەی بەڵگەنامەی پشکنین",
+    "Please fill all the details. We will verify them within 3 to 5 business days. Kindly wait until the verification process is complete. Thank you for your patience.": "تکایە هەموو وردەکارییەکان پڕبکەوە. لە ماوەی ٣ بۆ ٥ ڕۆژی کاری دا دڵنیابوونەوە دەکرێت. تکایە چاوەڕێی تەواوبوونی پرۆسەکە بکە. سوپاس بۆ هاوکاری کردنت.",
     "Ok": "باشە",
-    "National ID Card image is required": "وێنەی ناسنامەی نیشتمانی پێویستە",
-    "Background check document image is required": "وێنەی بەڵگەنامەی پشتبینی پێویستە",
+    "National ID Card image is required": "وێنەی ناسنامە پێویستە",
+    "Background check document image is required": "وێنەی بەڵگەنامەی پشکنین پێویستە",
     "Create store": "دروستکردنی فرۆشگا",
     "Store Name": "ناوی فرۆشگا",
     "Store Name is required": "ناوی فرۆشگا پێویستە",
     "Store Document": "بەڵگەنامەی فرۆشگا",
     "Store Document is required": "بەڵگەنامەی فرۆشگا پێویستە",
-    "National Id Number": "ژمارەی ناسنامەی نیشتمانی",
+    "National Id Number": "ژمارەی ناسنامە",
     "National Id Number is required": "ژمارەی ناسنامە پێویستە",
-    "Upload National ID": "بارکردنی ناسنامەی نیشتمانی",
-    "National ID is required": "ناسنامەی نیشتمانی پێویستە",
+    "Upload National ID": "وێنەی ناسنامە باربکە",
+    "National ID is required": "ناسنامە پێویستە",
     "Checkout": "پارەدان",
     "Delivery Location": "شوێنی گەیاندن",
     "Payment Options": "هەڵبژاردەی پارەدان",
     "Pay Online": "پارەدان بە ئینتەرنێت",
-    "Cash on delivery": "پارە بە دەست گەیاندنەوە",
-    "You have total": "تۆ تەواوی هەیە",
-    "point": "خاڵ",
-    "Minimum 25,000 points required to redeem.": "کەمترین خاڵی پێویست بۆ گەڕاندنەوە ٢٥٠٠٠ خاڵە.",
-    "Order amount is less than the discount. Please add more products.": "نرخی داواکاری کەمترە لە نرخی داواکراو. تکایە کاڵای زیاتر زیاد بکە.",
+    "Cash on delivery": "پارە لەکاتی گەیاندن",
+    "You have total": "تۆ کۆی",
+    "point": "خاڵت هەیە",
+    "Minimum 25,000 points required to redeem.": "کەمترین ٢٥,٠٠٠ خاڵ پێویستە بۆ گەڕاندنەوە.",
+    "Order amount is less than the discount. Please add more products.": "بڕی داواکاری کەمترە لە داشکاندن. تکایە کاڵای زیاتر زیاد بکە.",
     "Discount": "داشکاندن",
     "Place Order": "داواکاری بکە",
-    "Your Order is Confirmed.": "داواکارییەکەت پشتڕاستکرا.",
+    "Your Order is Confirmed.": "داواکارییەکەت پشتڕاستکرایەوە.",
     "Thanks for your Order": "سوپاس بۆ داواکارییەکەت",
     "Home": "ماڵەوە",
-    "Categories": "هاوپۆلەکان",
+    "Categories": "پۆلەکان",
     "Referal": "ڕەوانەکردن",
     "Work Orders": "داواکارییەکانی کار",
     "On the way to delivery": "لە ڕێگادای بۆ گەیاندن",
@@ -252,5 +252,4 @@
     "Change Language": "زمان بگۆڕە",
     "Are you sure you have Picked up the Products from the seller!": "دڵنیایت کە بەرهەمەکانت لە فرۆشیار وەرگرتووە؟"
 
-  }
-  
+}
